# SimExporter

./: .buildinfo  .gitignore  README.md  api.html  demo.html  genindex.html  index.html  install.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  demo.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/workflows/: documentation.yml  static.yml
_modules/: index.html
_modules/SimExporter/core/: exporter.html  factory.html
_sources/: api.rst.txt  usage.rst.txt
docs/: index.md  install.md  usage.md
docs/src/: api.rst  conf.py  demo.rst  index.rst  install.rst  usage.rst
examples/core/: export_animation.py  export_arrows.py  export_meshes.py  export_others.py  export_points.py  export_scene.py  export_tetra_mesh.py  github_gallery.py  mimesis_website.py
examples/sofa/: export_logo.py  simulation.py
src/SimExporter/core/: __init__.py  exporter.py  factory.py  objects.py
src/SimExporter/sofa/: __init__.py  exporter.py  factory.py  recorder.py
